<resources>
    <string name="app_name" translatable="false">Session</string>
    <string name="about">About</string>
    <string name="accept">Accept</string>
    <string name="accountIDCopy">Copy Account ID</string>
    <string name="accountId">Account ID</string>
    <string name="accountIdCopied">Account ID Copied</string>
    <string name="accountIdCopyDescription">Copy your Account ID then share it with your friends so they can message you.</string>
    <string name="accountIdEnter">Enter Account ID</string>
    <string name="accountIdErrorInvalid">This Account ID is invalid. Please check and try again.</string>
    <string name="accountIdOrOnsEnter">Enter Account ID or ONS</string>
    <string name="accountIdOrOnsInvite">Invite Account ID or ONS</string>
    <string name="accountIdShare">Hey, I\'ve been using {app_name} to chat with complete privacy and security. Come join me! My Account ID is\n\n{account_id}\n\nDownload it at {session_download_url}</string>
    <string name="accountIdYours">Your Account ID</string>
    <string name="accountIdYoursDescription">This is your Account ID. Other users can scan it to start a conversation with you.</string>
    <string name="actualSize">Actual Size</string>
    <string name="add">Add</string>
    <string name="addAdmins">Add Admins</string>
    <string name="addAdminsDescription">Enter the Account ID of the user you are promoting to admin.\n\nTo add multiple users, enter each Account ID separated by a comma. Up to 20 Account IDs can be specified at a time.</string>
    <string name="adminCannotBeRemoved">Admins cannot be removed.</string>
    <string name="adminMorePromotedToAdmin"><b>{name}</b> and <b>{count} others</b> were promoted to Admin.</string>
    <string name="adminPromote">Promote Admins</string>
    <string name="adminPromoteDescription">Are you sure you want to promote <b>{name}</b> to admin? Admins cannot be removed.</string>
    <string name="adminPromoteMoreDescription">Are you sure you want to promote <b>{name}</b> and <b>{count} others</b> to admin? Admins cannot be removed.</string>
    <string name="adminPromoteToAdmin">Promote to Admin</string>
    <string name="adminPromoteTwoDescription">Are you sure you want to promote <b>{name}</b> and <b>{other_name}</b> to admin? Admins cannot be removed.</string>
    <string name="adminPromotedToAdmin"><b>{name}</b> was promoted to Admin.</string>
    <string name="adminPromotionFailed">Admin promotion failed</string>
    <string name="adminPromotionFailedDescription">Failed to promote {name} in {group_name}</string>
    <string name="adminPromotionFailedDescriptionMultiple">Failed to promote {name} and {count} others in {group_name}</string>
    <string name="adminPromotionFailedDescriptionTwo">Failed to promote {name} and {other_name} in {group_name}</string>
    <string name="adminPromotionNotSent">Promotion not sent</string>
    <string name="adminPromotionSent">Admin promotion sent</string>
    <string name="adminPromotionStatusUnknown">Promotion status unknown</string>
    <string name="adminRemove">Remove Admins</string>
    <string name="adminRemoveAsAdmin">Remove as Admin</string>
    <string name="adminRemoveCommunityNone">There are no Admins in this Community.</string>
    <string name="adminRemoveFailed">Failed to remove {name} as Admin.</string>
    <string name="adminRemoveFailedMultiple">Failed to remove <b>{name}</b> and <b>{count} others</b> as Admin.</string>
    <string name="adminRemoveFailedOther">Failed to remove <b>{name}</b> and <b>{other_name}</b> as Admin.</string>
    <string name="adminRemovedUser"><b>{name}</b> was removed as Admin.</string>
    <string name="adminRemovedUserMultiple"><b>{name}</b> and <b>{count} others</b> were removed as Admin.</string>
    <string name="adminRemovedUserOther"><b>{name}</b> and <b>{other_name}</b> were removed as Admin.</string>
    <plurals name="adminSendingPromotion">
        <item quantity="one">Sending admin promotion</item>
        <item quantity="other">Sending admin promotions</item>
    </plurals>
    <string name="adminSettings">Admin Settings</string>
    <string name="adminTwoPromotedToAdmin"><b>{name}</b> and <b>{other_name}</b> were promoted to Admin.</string>
    <string name="andMore">+{count}</string>
    <string name="anonymous">Anonymous</string>
    <string name="appIcon">App Icon</string>
    <string name="appIconAndNameChange">Change App Icon and Name</string>
    <string name="appIconAndNameChangeConfirmation">Changing the app icon and name requires {app_name} to be closed. Notifications will continue to use the default {app_name} icon and name.</string>
    <string name="appIconAndNameDescription">Alternate app icon and name is displayed on home screen and app drawer.</string>
    <string name="appIconAndNameSelectionDescription">The selected app icon and name is displayed on the home screen and app drawer.</string>
    <string name="appIconAndNameSelectionTitle">Icon and name</string>
    <string name="appIconDescription">Alternate app icon is displayed on home screen and app library. App name will still appear as \'{app_name}\'.</string>
    <string name="appIconEnableIcon">Use alternate app icon</string>
    <string name="appIconEnableIconAndName">Use alternate app icon and name</string>
    <string name="appIconSelect">Select alternate app icon</string>
    <string name="appIconSelectionTitle">Icon</string>
    <string name="appNameCalculator">Calculator</string>
    <string name="appNameMeetingSE">MeetingSE</string>
    <string name="appNameNews">News</string>
    <string name="appNameNotes">Notes</string>
    <string name="appNameStocks">Stocks</string>
    <string name="appNameWeather">Weather</string>
    <string name="appProBadge">{app_pro} Badge</string>
    <string name="appearanceAutoDarkMode">Auto Dark Mode</string>
    <string name="appearanceHideMenuBar">Hide Menu Bar</string>
    <string name="appearanceLanguage">Language</string>
    <string name="appearanceLanguageDescription">Choose your language setting for {app_name}. {app_name} will restart when you change your language setting.</string>
    <string name="appearancePreview1">How are you?</string>
    <string name="appearancePreview2">I\'m good thanks, you?</string>
    <string name="appearancePreview3">I\'m doing great, thanks.</string>
    <string name="appearancePrimaryColor">Primary Color</string>
    <string name="appearanceThemes">Themes</string>
    <string name="appearanceThemesClassicDark">Classic Dark</string>
    <string name="appearanceThemesClassicLight">Classic Light</string>
    <string name="appearanceThemesOceanDark">Ocean Dark</string>
    <string name="appearanceThemesOceanLight">Ocean Light</string>
    <string name="appearanceZoom">Zoom</string>
    <string name="appearanceZoomIn">Zoom In</string>
    <string name="appearanceZoomOut">Zoom Out</string>
    <string name="attachment">Attachment</string>
    <string name="attachments">Attachments</string>
    <string name="attachmentsAdd">Add attachment</string>
    <string name="attachmentsAlbumUnnamed">Unnamed Album</string>
    <string name="attachmentsAutoDownload">Auto-download Attachments</string>
    <string name="banDeleteAll">Ban and Delete All</string>
    <string name="banUser">Ban User</string>
    <string name="block">Block</string>
    <string name="blockUnblock">Unblock</string>
    <string name="callsVoiceAndVideo">Voice and Video Calls</string>
    <string name="callsVoiceAndVideoBeta">Voice and Video Calls (Beta)</string>
    <string name="callsVoiceAndVideoToggleDescription">Enables voice and video calls to and from other users.</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="clearDataAll">Clear All Data</string>
    <string name="clearDataAllDescription">This will permanently delete your messages and contacts. Would you like to clear this device only, or delete your data from the network as well?</string>
    <string name="communityUrlCopy">Copy Community URL</string>
    <string name="contactUserDetails">User Details</string>
    <string name="conversationsAudioMessages">Audio Messages</string>
    <string name="conversationsAutoplayAudioMessage">Autoplay Audio Messages</string>
    <string name="conversationsAutoplayAudioMessageDescription">Autoplay consecutively sent audio messages.</string>
    <string name="conversationsMessageTrimming">Message Trimming</string>
    <string name="conversationsMessageTrimmingTrimCommunities">Trim Communities</string>
    <string name="conversationsMessageTrimmingTrimCommunitiesDescription">Auto-delete messages older than 6 months in communities with 2000+ messages.</string>
    <string name="conversationsSendWithEnterKey">Send with Enter</string>
    <string name="conversationsSendWithEnterKeyDescription">Tapping the Enter Key will send message instead of starting a new line.</string>
    <string name="conversationsSettingsAllMedia">All Media</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="helpFAQ">FAQ</string>
    <string name="helpHelpUsTranslateSession">Help us translate {app_name}</string>
    <string name="helpReportABug">Report a Bug</string>
    <string name="helpReportABugExportLogsDescription">Export your logs, then upload the file through {app_name}\'s Help Desk.</string>
    <string name="helpSupport">Support</string>
    <string name="helpWedLoveYourFeedback">We\'d love your feedback</string>
    <string name="incognitoKeyboard">Incognito Keyboard</string>
    <string name="incognitoKeyboardDescription">Request incognito mode if available. Depending on the keyboard you are using, your keyboard may ignore this request.</string>
    <string name="info">Info</string>
    <string name="linkPreviews">Link Previews</string>
    <string name="linkPreviewsDescription">Show link previews for supported URLs.</string>
    <string name="linkPreviewsSend">Send Link Previews</string>
    <string name="lockApp">Lock App</string>
    <string name="lockAppDescription">Require fingerprint, PIN, pattern or password to unlock {app_name}.</string>
    <string name="messageMarkRead">Mark read</string>
    <string name="notificationsContent">Notification Content</string>
    <string name="notificationsContentDescription">The information shown in notifications.</string>
    <string name="notificationsFastModeDescription">You\'ll be notified of new messages reliably and immediately using Google\'s notification Servers.</string>
    <string name="notificationsGoToDevice">Go to device notification settings</string>
    <string name="notificationsMute">Mute</string>
    <string name="notificationsMuteUnmute">Unmute</string>
    <string name="notificationsSound">Sound</string>
    <string name="notificationsSoundDescription">Sound when App is open</string>
    <string name="notificationsStrategy">Notification Strategy</string>
    <string name="notificationsStyle">Notification Style</string>
    <string name="notificationsVibrate">Vibrate</string>
    <string name="pin">Pin</string>
    <string name="pinUnpin">Unpin</string>
    <string name="readReceipts">Read Receipts</string>
    <string name="readReceiptsDescription">Show read receipts for all messages you send and receive.</string>
    <string name="reply">Reply</string>
    <string name="resend">Resend</string>
    <string name="resync">Resync</string>
    <string name="save">Save</string>
    <string name="screenSecurity">Screen Security</string>
    <string name="sessionMessageRequests">Message Requests</string>
    <string name="sessionNotifications">Notifications</string>
    <string name="share">Share</string>
    <string name="typingIndicators">Typing Indicators</string>
    <string name="typingIndicatorsDescription">See and share typing indicators.</string>
    <string name="useFastMode">Use Fast Mode</string>
</resources>