<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/notificationsStrategy">

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:key="pref_key_use_fcm"
            android:title="@string/useFastMode"
            android:summary="@string/notificationsFastModeDescription"
            android:defaultValue="false" />

        <Preference android:title="@string/notificationsGoToDevice"
            android:key="pref_notification_priority" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notificationsStyle">

        <org.thoughtcrime.securesms.preferences.widgets.DropDownPreference
            android:key="pref_key_ringtone"
            android:title="@string/notificationsSound"
            android:persistent="false"
            android:defaultValue="content://settings/system/notification_sound" />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:key="pref_sound_when_app_open"
            android:defaultValue="false"
            android:title="@string/notificationsSoundDescription"
            />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:key="pref_key_vibrate"
            android:defaultValue="true"
            android:title="@string/notificationsVibrate" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notificationsContent" >
        <org.thoughtcrime.securesms.preferences.widgets.DropDownPreference
            android:key="pref_notification_privacy"
            android:title="@string/notificationsContent"
            android:summary="@string/notificationsContentDescription"
            android:defaultValue="all"
            android:entries="@array/pref_notification_privacy_entries"
            android:entryValues="@array/pref_notification_privacy_values" />

    </PreferenceCategory>

</PreferenceScreen>