<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/reply"
        android:id="@+id/menu_context_reply"
        android:icon="?menu_reply_icon"
        app:showAsAction="always" />

    <item
        android:title="@string/save"
        android:id="@+id/menu_context_save_attachment"
        android:icon="@drawable/ic_arrow_down_to_line"
        app:iconTint="?android:textColorPrimary"
        app:showAsAction="always" />

    <item
        android:title="@plurals/deleteMessage"
        android:id="@+id/menu_context_delete_message"
        android:icon="@drawable/ic_trash_2"
        app:iconTint="?android:textColorPrimary"
        app:showAsAction="always" />

    <item
        android:title="@string/info"
        android:id="@+id/menu_message_details"
        app:showAsAction="never" />

    <item
        android:title="@string/copy"
        android:id="@+id/menu_context_copy"
        android:icon="?menu_copy_icon"
        app:iconTint="?android:textColorPrimary"
        app:showAsAction="always" />

    <item
        android:title="@string/resync"
        android:id="@+id/menu_context_resync"
        app:showAsAction="never" />

    <item
        android:title="@string/resend"
        android:id="@+id/menu_context_resend"
        app:showAsAction="never" />

    <item
        android:title="@string/banUser"
        android:id="@+id/menu_context_ban_user"
        app:showAsAction="never" />

    <item
        android:title="@string/banDeleteAll"
        android:id="@+id/menu_context_ban_and_delete_all"
        app:showAsAction="never" />

    <item
        android:title="@string/accountIDCopy"
        android:id="@+id/menu_context_copy_public_key"
        app:showAsAction="never" />

</menu>
