<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:key="message_trimming" android:title="@string/conversationsMessageTrimming">
        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_trim_threads"
            android:summary="@string/conversationsMessageTrimmingTrimCommunitiesDescription"
            android:title="@string/conversationsMessageTrimmingTrimCommunities" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/conversationsSendWithEnterKey">
        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_enter_sends"
            android:summary="@string/conversationsSendWithEnterKeyDescription"
            android:title="@string/conversationsSendWithEnterKey" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/conversationsAudioMessages">
        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_autoplay_audio"
            android:summary="@string/conversationsAutoplayAudioMessageDescription"
            android:title="@string/conversationsAutoplayAudioMessage" />
    </PreferenceCategory>

    <org.thoughtcrime.securesms.preferences.BlockedContactsPreference
        android:key="blocked_contacts"
        android:layout="@layout/blocked_contacts_preference"
        />

</PreferenceScreen>
