<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory>
        <Preference
            android:key="export_logs"
            android:title="@string/helpReportABug"
            android:summary="@string/helpReportABugExportLogsDescription"
            android:widgetLayout="@layout/export_logs_widget" />

        <!-- Note: Having this as `android:layout` rather than `android:layoutWidget` allows it to fit the screen width -->
        <Preference android:layout="@layout/preference_widget_progress" />
    </PreferenceCategory>

    <PreferenceCategory>
        <Preference
            android:key="translate_session"
            android:title="@string/helpHelpUsTranslateSession"
            android:widgetLayout="@layout/preference_external_link" />
    </PreferenceCategory>

    <PreferenceCategory>
        <Preference
            android:key="feedback"
            android:title="@string/helpWedLoveYourFeedback"
            android:widgetLayout="@layout/preference_external_link" />
    </PreferenceCategory>

    <PreferenceCategory>
        <Preference
            android:key="faq"
            android:title="@string/helpFAQ"
            android:widgetLayout="@layout/preference_external_link" />
    </PreferenceCategory>

    <PreferenceCategory>
        <Preference
            android:key="support"
            android:title="@string/helpSupport"
            android:widgetLayout="@layout/preference_external_link" />
    </PreferenceCategory>

</PreferenceScreen>