<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/media_preview__forward"
        android:icon="?menu_forward_icon"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/save"
        android:icon="?menu_save_icon"
        android:title="@string/save"
        app:showAsAction="always" />

    <item
        android:id="@+id/media_preview__overview"
        android:icon="?menu_photo_library_icon"
        android:title="@string/conversationsSettingsAllMedia"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:icon="?menu_delete_icon"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
</menu>
