<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:elevation="4dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearDataAll"
        android:textColor="?android:textColorPrimary"
        style="@style/TextAppearance.Session.Dialog.Title"
        android:textSize="@dimen/medium_font_size" />

    <TextView
        android:id="@+id/dialogDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="@dimen/small_spacing"
        android:text="@string/clearDataAllDescription"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        style="@style/TextAppearance.Session.Dialog.Message" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_spacing"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="2"
        tools:listitem="@layout/item_selectable"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_button_height"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.Session.Button.Dialog.DangerText"
            android:id="@+id/clearAllDataButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_button_height"
            android:layout_weight="1"
            android:text="@string/clear" />

        <Button
            style="@style/Widget.Session.Button.Dialog.UnimportantText"
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_button_height"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="@dimen/large_spacing"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:indeterminateTint="?colorAccent"
            android:indeterminate="true"
            android:visibility="gone"
            tools:visibility="visible"/>


    </LinearLayout>

</LinearLayout>